# dci-core-host

./: CMakeLists.txt
cmakeModules/: dciHostModule.cmake
idl/: host.idl
idl/host/: daemon.idl
include/dci/: host.hpp
include/dci/host/: api.hpp  daemonBase.hpp  exception.hpp  manager.hpp  test.hpp
include/dci/host/module/: entry.hpp  manifest.hpp  serviceBase.hpp  stopLocker.hpp
src/: dll.cpp  dll.hpp  main.cpp  manager.cpp  test.cpp
src-executable/: main.cpp
src/impl/: manager.cpp  manager.hpp  module.cpp  module.hpp
src/module/: entry.cpp  manifest.cpp  stopLocker.cpp
